<resources>
    <string name="app_name">MTJ</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_settings">Settings</string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_ip">Custom static IP address</string>
    <string name="pref_default_ip">10.0.0.1</string>
    <string name="pref_title_port_number">Port</string>
    <string name="pref_default_port_number">8080</string>

</resources>
