<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_display_name"
        android:inputType="textCapWords"
        android:key="example_text"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_display_name" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="use_custom_ip_address"
        android:title="Use custom IP" />

    <EditTextPreference
        android:dependency="use_custom_ip_address"
        android:capitalize="words"
        android:defaultValue="@string/pref_default_ip"
        android:inputType="textCapWords"
        android:key="default_ip"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_ip" />

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_port_number"
        android:inputType="number"
        android:key="port_number"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_port_number" />

</PreferenceScreen>
